--- a/CourseProject.rmd
+++ b/CourseProject.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Practical Machine Learning - Course Project"
-author: "Matthew Bender"
-date: "October 15, 2015"
+author: "Yury Bagotsky"
+date: "Feb 15, 2016"
 output: html_document
 ---
 
